# OvOCR_CPP

./: .gitignore  CMakeLists.txt  OvOCR_new.sln  README.md  main.cpp
.history/: .gitignore_20230912175157  .gitignore_20230912175414  .gitignore_20230912175538
OvOCR_new/: OvOCR_new.vcxproj  OvOCR_new.vcxproj.filters  main.cpp  ocr_det.cpp  ocr_det.h  paddleocr.cpp  paddleocr.h  preprocess_op.cpp  preprocess_op.h  utility.h
data/: korean_dict.txt  korean_dict_utf8.txt
include/: id_det.h  ocr_det.h  paddleocr.h  preprocess_op.h  utility.h
src/: id_det.cpp  paddleocr.cpp  postprocess_op.cpp  preprocess_op.cpp  utility.cpp
